<resources>
    <string name="app_name"></string>
    <string name="mtnc_toolbar_txt">الصيانة</string>
    <string name="orders_toolbar_txt">طلبات الصيانة</string>
    <string name="filter_txt">فلتر</string>
    <string name="search">بحث</string>
    <string name="delete_all">تفريغ</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="orders_toolbar_details_txt">طلبات الصيانة / تفاصيل الطلب</string>
    <string name="orders_toolbar_close_btn">اغلاق الإشارة</string>
    <string name="order_closed">الطلب مغلق</string>
    <string name="addOrder">اضافة</string>
    <string name="task_desc">توصيف المهمة</string>
    <string name="task">المهمة</string>
    <string name="task_name">تركيب عداد</string>
    <string name="entry_date_str">تاريخ الإدخال</string>
    <string name="date_ex_str">03/04/2022</string>
    <string name="entry_name_str">اسم المدخل</string>
    <string name="entry_name_ex">محمد احمد</string>
    <string name="duration_str">المدة</string>
    <string name="duration_ex">5.30</string>
    <string name="end_time">وقت الانتهاء</string>
    <string name="end_time_ex">17:30</string>
    <string name="start_time">وقت البدء</string>
    <string name="start_time_ex">16:45</string>
    <string name="execution_date">تاريخ التنفيذ</string>
    <string name="execution_date_ex">09/04/2022</string>
    <string name="ser_num_ex">88745715</string>
    <string name="entry_date">15/05/2022</string>
    <string name="add_magterials">add magterials</string>
    <string name="add_task">add task</string>
    <string name="add_process">add process</string>
    <string name="warning_close_filter">warning close filter</string>
    <string name="orders_filter_dialog">orders filter dialog</string>
    <string name="returned_materials">المواد المرجعة</string>
    <string name="materials">المواد </string>
    <string name="process">الآليات</string>
    <string name="details_add_process">اضافة آلية</string>
    <string name="details_add_materials">اضافة مواد</string>
    <string name="maintanance_groups">الفرق الفنية</string>
    <string name="write_process">اكتب الآلية</string>
    <string name="process_title">* الآلية</string>
    <string name="reset">إعادة تعيين</string>
    <string name="save">حفظ</string>
    <string name="material_num">رقم الصنف</string>
    <string name="write_material_num">اكتب رقم الصنف</string>
    <string name="material_name">اسم الصنف</string>
    <string name="write_material_name">اكتب اسم الصنف</string>
    <string name="unit">الوحدة</string>
    <string name="write_unit">اكتب الوحدة</string>
    <string name="recieved_quantity">الكمية المستلمة</string>
    <string name="write_recieved_quantity">اكتب الكمية المستلمة</string>
    <string name="used_quantity"> الكمية المستخدمه </string>
    <string name="write_used_quantity">اكتب الكمية المستخدمه</string>
    <string name="returned_quantity">الكمية المرجعة</string>
    <string name="write_returned_quantity">اكتب الكمية المرجعة</string>
    <string name="num">#6878874540</string>
    <string name="txt">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى ...</string>
    <string name="num2">88745715</string>
    <string name="sub_num">رقم الاشتراك</string>
    <string name="sub_name">ابو الكاس</string>
    <string name="transfarer">المحول</string>
    <string name="state">المحافظة</string>
    <string name="gaza">غزة</string>
    <string name="place">المكان</string>
    <string name="signal_ex">طلب تركيب عداد</string>
    <string name="signal">نوع الاشارة</string>
    <string name="entry_name">المدخل</string>
    <string name="name_ex">محمد ابراهيم الشنطي</string>
    <string name="num3">0599933399</string>
    <string name="options">خيارات</string>  v
    <string name="people_name">اسم المواطن</string>
    <string name="write_people_name">اكتب اسم المواطن</string>
    <string name="check_loads">فحص لأحمال</string>
    <string name="num5">2</string>
    <string name="name_ex1">محمد احمد</string>
    <string name="entry_date_title">تاريخ الإدخال</string>
    <string name="orders_filter_title">فلتر الطلبات</string>
    <string name="orders_filter_desc">يمكنك فلترة الطلبات من خلال اكثر من خيار</string>
    <string name="signal_num">رقم الإشارة</string>
    <string name="write_signal_num">اكتب رقم الإشارة</string>
    <string name="ser_num">الرقم المتسلسل</string>
    <string name="write_ser_num">اكتب الرقم المتسلسل</string>v
    <string name="write_sub_num">اكتب رقم الاشتراك</string>
    <string name="location">المقر</string>
    <string name="area">المنطقة</string>
    <string name="signal_type">نوع الاشارة</string>
    <string name="quantity">الكمية</string>
    <string name="cost">التكلفة</string>
    <string name="cost_ex">750 شيكل</string>
    <string name="category_name">اسم الصنف</string>
    <string name="electrical_counter">عداد كهرباء</string>
    <string name="category_num">رقم الصنف</string>
    <string name="category_status">حالة الصنف</string>
    <string name="used">المستخدمة</string>
    <string name="status_new">جديد</string>
    <string name="returned">المرجعة</string>
    <string name="close_signal">اغلاق الاشارة</string>
    <string name="close_signal_desc">هل انت متأكد من طلب اغلاق الاشارة؟</string>
    <string name="write_task">اكتب المهمة</string>
    <string name="task_req">* المهمة</string>
    <string name="add_task_title">إضافة مهمة</string>
    <string name="task_desc_req">* توصيف المهمة</string>
    <string name="write_task_desc">اكتب تفاصيل المهمة</string>
    <string name="execution_date_req">* تاريخ التنفيذ</string>
    <string name="end_date_req">* وقت الانهاء</string>
    <string name="time_ex">AM 11:00</string>
    <string name="start_date_req">* وقت البدء</string>
</resources>