<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/orders_filter_dialog"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/warning_close_filter"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add_process"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />


    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add_magterials"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add_task"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />


</LinearLayout>