<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tasksCard"
    android:layout_margin="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_2sdp"
    android:background="@drawable/textfield_background"
    android:orientation="vertical">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="right"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:orientation="vertical"
                android:layout_gravity="top"
                android:gravity="right"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_2sdp">

                <TextView
                    android:id="@+id/tasks_taskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_desc"
                    android:textColor="@color/GreyText" />

                <TextView
                    android:id="@+id/tasks_taskDescriptionTV"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/txt"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textColor="@color/BlackText" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:background="@color/LightGrey" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="top"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tasks_taskName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task"
                    android:textColor="@color/GreyText" />

                <TextView
                    android:id="@+id/tasks_taskNameTV"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/task_name"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textColor="@color/BlackText" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:background="@color/LightGrey" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:orientation="vertical"
                android:layout_gravity="top"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tasks_serNum"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/ser_num"
                    android:textColor="@color/GreyText" />

                <TextView
                    android:id="@+id/tasks_serNumTV"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/ser_num_ex"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textColor="@color/BlackText" />


            </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/_2sdp"
        android:background="@color/LightGrey" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:id="@+id/tasks_entryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_date_str"
                android:gravity="center"
                android:textColor="@color/GreyText" />

            <TextView
                android:id="@+id/tasks_entryDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_ex_str"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:textColor="@color/BlackText" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/LightGrey" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:id="@+id/tasks_entryUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/entry_name_str"
                android:textColor="@color/GreyText" />

            <TextView
                android:id="@+id/tasks_entryUserNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_name_ex"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:textColor="@color/BlackText" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/LightGrey" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp">

            <TextView
                android:id="@+id/tasks_duration"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:text="@string/duration_str"
                android:gravity="center"
                android:textColor="@color/GreyText" />

            <TextView
                android:id="@+id/tasks_durationTV"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:text="@string/duration_ex"
                android:gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:textColor="@color/BlackText" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/LightGrey" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp">

            <TextView
                android:id="@+id/tasks_endTime"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:gravity="center"
                android:textColor="@color/GreyText" />

            <TextView
                android:id="@+id/tasks_endTimeTV"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:text="@string/end_time_ex"
                android:gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:textColor="@color/BlackText" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/LightGrey" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp">

            <TextView
                android:id="@+id/tasks_startTime"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:gravity="center"
                android:textColor="@color/GreyText" />

            <TextView
                android:id="@+id/tasks_startTimeTV"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:text="@string/start_time_ex"
                android:gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:textColor="@color/BlackText" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/LightGrey" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:id="@+id/tasks_executionDate"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="wrap_content"
                android:text="@string/execution_date"
                android:gravity="center"
                android:textColor="@color/GreyText" />

            <TextView
                android:id="@+id/tasks_executionDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/execution_date_ex"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:textColor="@color/BlackText" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>


