<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/userInfoCard"
    android:layout_margin="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/textfield_background"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/ordersCard_entryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/entry_date"
                android:textColor="@color/GreyText"
                tools:ignore="RtlHardcoded" />


            <TextView
                android:id="@+id/ordersCard_serNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/num"
                android:textColor="@color/BlackText"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ordersCard_description"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="@string/txt"
            android:textColor="@color/BlackText"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_280sdp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="right"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="@dimen/_190sdp"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/_5sdp"
                    tools:ignore="RtlSymmetry">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:background="@drawable/textfield_background"
                        android:orientation="horizontal"
                        android:padding="@dimen/_3sdp">

                        <TextView
                            android:id="@+id/ordersCard_subscriptionNoTV"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_3sdp"
                            android:gravity="center"
                            android:text="@string/num2"
                            android:textColor="@color/BlackText" />

                        <TextView
                            android:id="@+id/ordersCard_subscriptionNo"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="wrap_content"
                            android:text="@string/sub_num"
                            android:gravity="center"
                            android:textColor="@color/GreyText" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:background="@drawable/textfield_background"
                        android:orientation="horizontal"
                        android:padding="@dimen/_3sdp">

                        <TextView
                            android:id="@+id/ordersCard_transfarerTV"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_3sdp"
                            android:text="@string/sub_name"
                            android:textColor="@color/BlackText" />

                        <TextView
                            android:id="@+id/ordersCard_transfarer"
                            android:layout_width="@dimen/_19sdp"
                            android:layout_height="wrap_content"
                            android:text="@string/transfarer"
                            android:textColor="@color/GreyText" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:background="@drawable/textfield_background"
                        android:orientation="horizontal"
                        android:padding="@dimen/_3sdp">

                        <TextView
                            android:id="@+id/ordersCard_userStateTV"
                            android:layout_width="@dimen/_23sdp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_2sdp"
                            android:text="@string/gaza"
                            android:gravity="center"
                            android:textColor="@color/BlackText" />

                        <TextView
                            android:id="@+id/ordersCard_userState"
                            android:layout_width="@dimen/_19sdp"
                            android:layout_height="wrap_content"
                            android:text="@string/place"
                            android:gravity="center"
                            android:textColor="@color/GreyText" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/_5sdp"
                    tools:ignore="RtlSymmetry">


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:background="@drawable/textfield_background"
                        android:orientation="horizontal"
                        android:padding="@dimen/_3sdp">

                        <TextView
                            android:id="@+id/ordersCard_signalTypeTV"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_3sdp"
                            android:text="@string/signal_ex"
                            android:gravity="center"
                            android:textColor="@color/BlackText" />

                        <TextView
                            android:id="@+id/ordersCard_signalType"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="wrap_content"
                            android:text="@string/signal"
                            android:gravity="center"
                            android:textColor="@color/GreyText" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:background="@drawable/textfield_background"
                        android:orientation="horizontal"
                        android:padding="@dimen/_3sdp">

                        <TextView
                            android:id="@+id/ordersCard_entryNameTV"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_3sdp"
                            android:text="@string/entry_name_ex"
                            android:gravity="center"
                            android:textColor="@color/BlackText" />

                        <TextView
                            android:id="@+id/ordersCard_entryName"
                            android:layout_width="@dimen/_19sdp"
                            android:layout_height="wrap_content"
                            android:text="@string/entry_name"
                            android:gravity="center"
                            android:textColor="@color/GreyText" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_background"
                android:orientation="horizontal"
                android:gravity="right"
                android:padding="@dimen/_5sdp"
                android:weightSum="2">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/ordersCard_userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/name_ex"
                        android:textColor="@color/BlackText" />


                    <TextView
                        android:id="@+id/ordersCard_userPhoneNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/num3"
                        android:textColor="@color/BlackText" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <ImageView
                    android:id="@+id/ordersCard_userImage"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_4sdp"
                    tools:srcCompat="@drawable/ic_user" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ordersCard_optionsBtn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_weight="1"
        android:background="@drawable/halph_rounded_light_blue_button"
        android:text="@string/options"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal"
        android:layout_marginStart="@dimen/_10sdp" />

</LinearLayout>